--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,11 +1,21 @@
 ---
-- name: add universe to repositories
+# zabdelillah.packages/debian.yml
+# Adds custom deb repositories to the sources list and forces the update of
+#   the apt repository. The latter is useful in a newly spawned virtual machine
+#   or ec2 instance
+- name: add custom apt repositories (apt.sources)
   ansible.builtin.lineinfile:
     path: /etc/apt/sources.list
     line: "deb {{ item }}"
     create: yes
   loop: "{{ apt_repositories }}"
   when: "apt_repositories is defined"
+
+- name: add custom apt repositories (from deb)
+  - ansible.builtin.apt:
+      deb: "{{ item }}"
+    loop: "{{ custom_repositories.from_deb }}"
+    when: "custom_repositories.from_deb is defined"
 
 - name: update apt repositories
   ansible.builtin.apt:
