--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -12,10 +12,10 @@
   when: "apt_repositories is defined"
 
 - name: add custom apt repositories (from deb)
-  - ansible.builtin.apt:
-      deb: "{{ item }}"
-    loop: "{{ custom_repositories.from_deb }}"
-    when: "custom_repositories.from_deb is defined"
+  ansible.builtin.apt:
+    deb: "{{ item }}"
+  loop: "{{ custom_repositories.from_deb }}"
+  when: "custom_repositories.from_deb is defined"
 
 - name: update apt repositories
   ansible.builtin.apt:
